# src/routes/store.route.js
@@ -1,8 +1,9 @@
 import express from "express";
 import asyncHandler from "express-async-handler";
 
-import { storeAddStore } from "../controllers/store.controller.js";
+import { storeAddStore, storeAddReview } from "../controllers/store.controller.js";
 
 export const storeRouter = express.Router();
 
 storeRouter.post("/addStore", asyncHandler(storeAddStore));
+storeRouter.post("/addReview", asyncHandler(storeAddReview));
