# swagger/store.swagger.yaml
@@ -79,3 +79,87 @@ paths:
               message:
                 type: string
                 example: 서버 에러, 관리자에게 문의 바랍니다.
+  /store/addReview:
+    post:
+      tags:
+        - Store-Review
+      summary: 가게 리뷰 추가
+      parameters:
+        - name: addReview
+          in: body
+          required: true
+          schema:
+            properties:
+              member_id:
+                type: integer
+                description: 멤버 번호
+                example: 1
+              store_id:
+                type: integer
+                description: 가게 번호
+                example: 1
+              body:
+                type: string
+                description: 리뷰 내용
+                example: review body
+              score:
+                type: float
+                description: 가게 리뷰 점수
+                example: 5.0
+      responses:
+        "200":
+          description: 리뷰 추가 성공!
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              isSuccess:
+                type: boolean
+                example: true
+              code:
+                type: integer
+                example: 2000
+              message:
+                type: string
+                example: "success!"
+              data:
+                type: object
+                example: { "body": "review body", "score": 5.0 }
+
+        "400":
+          description: 잘못된 요청
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 400
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON001
+              message:
+                type: string
+                example: 잘못된 요청입니다
+
+        "500":
+          description: 서버 에러
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 500
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON000
+              message:
+                type: string
+                example: 서버 에러, 관리자에게 문의 바랍니다.
